--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!Doctype html>
 
 <html>
-  <label>Testing</label>
-  <label id="balance"></label>
+  <center>
+    <label style=font-family="sans-serif">Testing</label>
+    <label id="balance">1</label>
+  </center>
 </html>
