--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!Doctype html>
 
 <html>
-  <center>
-    <label style=font-family="sans-serif">Testing</label>
-    <label id="balance">1</label>
-  </center>
+  <head>
+      <style>
+        body {
+          font-family: "Arial", serif;
+          font-size: 25px
+        }
+      </style>
+  </head>
+
+  <body>
+    <center>
+      <label style=font-family="sans-serif">Testing</label>
+      <label id="balance">1</label>
+    </center>
+  </body>
 </html>
