--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
       <style>
         body {
-          font-family: "Arial", serif;
-          font-size: 25px
+          font-family: "Arial";
+          font-size: "25px";
         }
       </style>
   </head>
