--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <style>
         body {
           font-family: "Arial";
-          font-size: "75px";
+          font-size: 75px;
         }
       </style>
   </head>
