--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
       <style>
         body {
           font-family: "Arial";
-          font-size: 75px;
+          font-size: 60px;
         }
       </style>
   </head>
 
   <body>
     <center>
-      <label style=font-family="sans-serif">Testing</label>
-      <label id="balance">1</label>
+      <p style=font-family="sans-serif">Testing</p>
+      <p id="balance">1</p>
+
+      <button style="background-color: grey;">click</button>
     </center>
+
+    <script scr="code.js"></script>
   </body>
 </html>
