--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
   <body>
     <center>
       <p style=font-family="sans-serif">Testing</p>
-      <p id="balance">1</p>
+      <label>$</label>
+      <label id="balance">1</label>
 
-      <button style="background-color: grey;">click</button>
+      <button style="background-color: grey; width: 150px; height: 100px;">get money 🤑🤑🤑</button>
+
+      <p id="slot1">1</p>
     </center>
 
     <script scr="code.js"></script>
