--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
       <style>
-        body {
+        .maintext {
           font-family: "Arial";
           font-size: 60px;
         }
@@ -12,11 +12,10 @@
 
   <body>
     <center>
-      <p style=font-family="sans-serif">Testing</p>
-      <label>$</label>
-      <label id="balance">1</label>
+      <p class="maintext"; style="font-family="sans-serif">Testing</p>
+      <p>$</p> <label id="balance">1</label>
 
-      <button style="background-color: grey; width: 150px; height: 100px;">get money 🤑🤑🤑</button>
+      <button style="background-color: grey; width: 150px; height: 100px; font-size:50px;">get money 🤑🤑🤑</button>
 
       <p id="slot1">1</p>
     </center>
