--- a/index.html
+++ b/index.html
@@ -7,15 +7,22 @@
           font-family: "Arial";
           font-size: 60px;
         }
+
+        .smalltext {
+          font-family: "Arial";
+          font-size: 35px;
+        }
       </style>
   </head>
 
   <body>
     <center>
       <p class="maintext"; style="font-family="sans-serif">Testing</p>
-      <p>$</p> <label id="balance">1</label>
+      <br></br>
+      <label class="smalltext";>$</label>
+      <label class="smalltext"; id="balance">1</label>
 
-      <button style="background-color: grey; width: 150px; height: 100px; font-size:50px;">get money 🤑🤑🤑</button>
+      <button  style="background-color: grey; width: 150px; height: 100px; font-size:20px;">get money 🤑🤑🤑</button>
 
       <p id="slot1">1</p>
     </center>
