--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           font-size: 60px;
         }
 
-        .smalltext {
+        .smalltext {  
           font-family: "Arial";
           font-size: 35px;
         }
@@ -26,10 +26,10 @@
 
       <br></br>
       
-      <button  style="background-color: grey; width: 150px; height: 100px; font-size:20px;" onclick="click()">get money 🤑🤑🤑</button>
+      <button onclick="click()" style="width: 150px; height: 100px; font-size:20px;">get money</button>
 
     </center>
 
-    <script scr="code.js"></script>
+    <script scr="script.js"></script>
   </body>
 </html>
