--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html>
   <head>
+      <title>GAMBLING 🤑🤑🤑</title>
+    
       <style>
         .maintext {
           font-family: "Arial";
@@ -30,6 +32,21 @@
 
     </center>
 
-    <script scr="script.js"></script>
+    <script>
+      var cash = 1;
+
+      const balance = document.getElementById("balance");
+      balance.textContent = cash;
+
+      const button = document.getElementById("button");
+
+      function click() {
+        cash += 1;
+        balance.textContent = cash;
+
+        alert("Check!")
+      }
+    </script>
+    
   </body>
 </html>
