--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      <script>
         let cash = 1;
 
-        btn.onClick = function() {
+        btn.onclick = function() {
           cash += 1;
           let balance = document.getElementById("balance").textContent = toString(cash);
         }
