--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
 
      <script>
         let cash = 1;
-
+        const balance = document.getElementById("balance");
+       
         btn.onclick = function() {
           cash += 1;
-          let balance = document.getElementById("balance").textContent = toString(cash);
+          balance.textContent = cash;
         }
     </script>
   </body>
