--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <label class="smalltext">$</label>
       <label class="smalltext" id="balance">1</label>
 
-      <br>
+      <br><br>
       
       <button id ="btn" style="background-color: lightgrey; width: 150px; height: 100px; font-size:20px;">get money</button>
 
@@ -58,7 +58,7 @@
         const upg2costtext = document.getElementById("upg2cost");
        
         btn.onclick = function() {
-          cash += increment * multiplier;
+          cash += (increment * multiplier);
           balance.textContent = cash;
         }
 
