--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
     <center>
       <button id="moneyButton" class="menubutton">Earn Cash</button>
       <button id="upgradeButton" class="menubutton">Upgrade</button>
-
-      <p class="maintext"; style="font-family="sans-serif">cash game</p>
       
-      <br><br>
+      <br>
 
-      <div id="moneyDiv" style="width: 100%; height: 100%; background-color: white; border-style: double; border-width: 4px; display: block">
+      <div id="moneyDiv" style="width: 100vw; height: 100vh; background-color: white; border-style: double; border-width: 4px; display: block">
+        <label class="maintext">cash game</label>
+
+        <br>
+        
         <label class="smalltext">$</label>
         <label class="smalltext" id="balance">1</label>
 
@@ -57,7 +59,7 @@
 
         <label class="smallertext" id="incr">1 Cash/Click</label>
         </div>
-      <div id="upgradeDiv" style="width: 100%; height: 100%; background-color: white; border-style: double; border-width: 3px; display: none">
+      <div id="upgradeDiv" style="width: 100vw; height: 100vh; background-color: white; border-style: double; border-width: 3px; display: none">
         <label class="smallertext">$</label>
         <label class="smallertext" id="balance">1</label>
 
