--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <button id="moneyButton" class="menubutton">Earn Cash</button>
       <button id="upgradeButton" class="menubutton">Upgrade</button>
       
-      <br>
+      <div style="width: 100vw; height: 15px; opacity: 0; visibility: hidden;"></div>
 
-      <div id="moneyDiv" style="width: 100vw; height: 100vh; background-color: white; border-style: double; border-width: 4px; display: block">
+      <div id="moneyDiv" style="width: 100vw; height: 100%; background-color: white; display: block">
         <label class="maintext">cash game</label>
 
         <br>
@@ -59,7 +59,7 @@
 
         <label class="smallertext" id="incr">1 Cash/Click</label>
         </div>
-      <div id="upgradeDiv" style="width: 100vw; height: 100vh; background-color: white; border-style: double; border-width: 3px; display: none">
+      <div id="upgradeDiv" style="width: 100vw; height: 100%; background-color: white; display: none">
         <label class="smallertext">$</label>
         <label class="smallertext" id="balance">1</label>
 
