--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <label class = maintext>coin flip</label>
 
-        <label id="coinflip" style="font-family: Arial; font-size:50; width: 80px; height: 80px; border-style:solid; border-width:3px; corner-radius: 100%">HEADS</label>
+        <label id="coinflip" style="font-family: Arial; font-size:50; width: 80px; height: 80px; border-style:solid; border-width:3px">HEADS</label>
         <br>
         <button id ="btn3" style="background-color: lightgrey; width: 150px; height: 50px; font-size:20px;">Flip</button>
         
