--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
       <title>cash game</title>
     
       <style>
-        background-color: #d8572a;
         
         .maintext {
           font-family: "Arial";
@@ -40,7 +39,7 @@
       </style>
   </head>
 
-  <body>
+  <body style="background-color: #d8572a">
     <center>
       <button id="moneyButton" class="menubutton">Earn Cash</button>
       <button id="upgradeButton" class="menubutton">Upgrade</button>
