--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         .thinbutton {
           background-color: #5a189a; 
-          color:#780116;
+          color:#e0aaff;
           width: 150px; 
           height: 40px; 
           font-size:15px;
@@ -34,7 +34,7 @@
 
         .menubutton {
           background-color: #7b2cbf; 
-          color:#780116;
+          color:#e0aaff;
           width: 32%; 
           height: 30px; 
           font-size:12px;
