--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <br><br>
 
-        <button id ="btn2" style="background-color: #5a189a; width: 150px; height: 50px; font-size:20px;">Spin</button>
+        <button id ="btn2" style="background-color: #5a189a; color: #c77dff; width: 150px; height: 50px; font-size:20px;">Spin</button>
         
       </div>
 
