--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
         <br><br>
 
-        <label style="background-color: #f7b538" class="smallertext">Bet Amount: </label>
-        <input id="input" type="number"></input>
+        <label style="class="smallertext">Bet Amount: </label>
+        <input id="input" type="number" style="background-color: #5a189a; color: #c77dff"></input>
         
         <br><br>
 
