--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         <br><br>
 
-        <label style="class="smallertext">Bet Amount: </label>
+        <label class="smallertext">Bet Amount: </label>
         <input id="input" type="number" style="background-color: #5a189a; color: #c77dff"></input>
         
         <br><br>
